RJ First commit Test

--- a/Slug-Life/templates/sluglife.html
+++ b/Slug-Life/templates/sluglife.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>Test Header</h1>
-        <p>Test Paragraph</p>
+        <p>Test Paragraph Test</p>
     </body>
 </html>
