--- a/Slug-Life/templates/dininghalls.html
+++ b/Slug-Life/templates/dininghalls.html
@@ -1,7 +1,12 @@
 <!DOCTYPE HTML>
+<!--
+	Phantom by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Generic - Phantom by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">SlugLife</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
 								</a>
 
 							<!-- Nav -->
@@ -45,68 +50,34 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>This is SlugLife <br />
-								a tool to make your life as a slug easier</h1>
-								<p>All Everything you need as a UCSC Student all in one place.</p>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Buses</h2>
-										<div class="content">
-											<p>Bus schedule and information.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="dininghalls.html">
-										<h2>Dining Halls</h2>
-										<div class="content">
-											<p>Waitlines and menus for all 5 Dining Halls in UCSC.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Cafes</h2>
-										<div class="content">
-											<p>Wait times and the number of products left in all nine cafes in UCSC.</p>
-										</div>
-                                    </a>
-                                </article>
-                                <article class="style4">
-                                    <span class="image">
-                                        <img src="images/pic04.jpg" alt="" />
-                                    </span>
-                                    <a href="generic.html">
-                                        <h2>Libraries</h2>
-                                        <div class="content">
-                                            <p>All the information about both McHenry Library and Science and ENgineering Library.</p>
-                                        </div>
-                                    </a>
-                                </article>
-                                <article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Markets</h2>
-										<div class="content">
-											<p>Wait lines and number of products left in Bay Tree Bookstore, Banana Joe's, and Porter Market.</p>
-										</div>
-									</a>
-								</article>
-							</section>
+							<h1>Cowell/Stevenson Dining Hall</h1>
+							<span class="image main"><img src="images/cowell:stevensonimg.jpg" alt="" width="350" height="433" /></span>
+							<p></p>
+							<p></p>
+						</div>
+                        <div class="inner">
+							<h1>College 9/John R. Lewis Dining Hall</h1>
+							<span class="image main"><img src="images/College 9:John R. Lewis Dining Hall.jpg" alt="" width="400" height="450" /></span>
+							<p></p>
+							<p></p>
+						</div>
+                        <div class="inner">
+							<h1>Crown/Merill Dining Hall</h1>
+							<span class="image main"><img src="images/Crown:MerillDiningHall.jpg" alt="" width="300" height="455"/></span>
+							<p></p>
+							<p></p>
+						</div>
+                        <div class="inner">
+							<h1>Porter/Kresge Dining Hall </h1>
+							<span class="image main"><img src="images/Porter:KresgeDining Hall.jpg" alt="" width="400" height="450"/></span>
+							<p></p>
+							<p></p>
+						</div>
+                        <div class="inner">
+							<h1>Rachel Carson/Oakes Dining Hall </h1>
+							<span class="image main"><img src="images/RachelCarson:OakesDiningHall.jpg" alt="" width="350" height="473"/></span>
+							<p></p>
+							<p></p>
 						</div>
 					</div>
 
